cmake_minimum_required(VERSION 3.28)
project(29June_Lesson)

set(CMAKE_CXX_STANDARD 17)

#add_executable(29June_Lesson main.cpp)
#add_executable(29June_Lesson Взаимодейтвие_классов!_Наследование/1_Student_Drujba_vlojenie.cpp)
#add_executable(29June_Lesson Взаимодейтвие_классов!_Наследование/2_Agregaciya_compoziciya.cpp)
add_executable(29June_Lesson Взаимодейтвие_классов!_Наследование/3_Nasledovanie.cpp)



